implemented Excel utility